--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 
 .grid-container {
     height: 100vh;
+    width: 1fr;
+    display: grid;
 }
 
 .grid-items {
     color: white;
     font-size: 2em;
-    
 }
 
 .header {
@@ -40,10 +41,7 @@
 
 @media screen and (min-width:768px){
 
-    .grid-container {
-        width: 1fr;
-        display: grid;
-    }
+    
 
     .grid-container {
         grid-template: 1fr 1fr 4fr 1fr / 1fr 4fr;  
@@ -74,23 +72,29 @@
     }
 
     .grid-container {
-        grid-template-rows: 1fr 1fr 4fr 1fr;
+        grid-template-rows: 1fr 1fr 5fr 2fr 1fr;
         grid-template-areas:
             "header"
             "nav"
             "main"
+            "aside"
             "footer";
     }
 
     .grid-items {
-        margin: 10px;
-        padding: 30px;
-    }
-
-    .aside, .nav, .main {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 5px;
+    }
+    .footer {
+        margin-bottom: 0;
+        margin-inline: 0;
+    }
+
+    .header {
+        margin-top: 0;
+        margin-inline: 0;
     }
 }
 
